# rules-kotlin-bazel-issue

./: MODULE.bazel  README.md
datalib/: BUILD.bazel
datalib/data/: message.txt
datalib/src/main/java/org/acme/data/: DataLibrary.java
foo/: BUILD.bazel  Foo.kt  FooTest.kt  Main.kt
jfoo/: BUILD.bazel  Foo.java  FooTest.java  Main.java
