module(name = "sample")

bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_kotlin", version = "1.9.6")

junit_version = "5.9.1"

junit_platform_version = "1.9.1"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "org.junit.jupiter:junit-jupiter-api:" + junit_version,
        "org.junit.jupiter:junit-jupiter-engine:" + junit_version,
        "org.junit.jupiter:junit-jupiter-params:" + junit_version,
        "org.junit.platform:junit-platform-commons:" + junit_platform_version,
        "org.junit.platform:junit-platform-console:" + junit_platform_version,
        "org.junit.platform:junit-platform-engine:" + junit_platform_version,
        "org.junit.platform:junit-platform-launcher:" + junit_platform_version,
        "org.junit.platform:junit-platform-suite-api:" + junit_platform_version,
        "org.testcontainers:junit-jupiter:1.19.3",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
        "https://repo.maven.apache.org/maven2",
    ],
)
use_repo(maven, "maven")
